#2938 Fixed webkit dialog align bug.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3161 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/default/dialog.css
+++ b/_source/skins/default/dialog.css
@@ -365,12 +365,14 @@ body .cke_dialog
 .cke_skin_default.cke_ltr .cke_dialog_ui_hbox_child
 {
 	padding-right: 10px;
+	vertical-align: top;
 }
 
 .cke_skin_default.cke_rtl .cke_dialog_ui_hbox_first,
 .cke_skin_default.cke_rtl .cke_dialog_ui_hbox_child
 {
 	padding-left: 10px;
+	vertical-align: top;
 }
 
 .cke_skin_default .cke_dialog_ui_button
